--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "torchao>=0.9.0",
     "unsloth ; sys_platform == 'linux'",
     "unsloth-zoo ; sys_platform == 'linux'",
-    "vllm>=0.8.0",
+    "vllm==0.7.3",
     "wandb>=0.19.8",
     "peft>=0.14.0",
     "openpipe>=4.49.0",
