--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ dependencies = [
     "seaborn>=0.13.2",
     "torch>=2.5.1",
     "torchao>=0.9.0",
-    "unsloth ; sys_platform == 'linux'",
-    "unsloth-zoo ; sys_platform == 'linux'",
+    "unsloth==2025.3.19 ; sys_platform == 'linux'",
+    "unsloth-zoo==2025.3.17 ; sys_platform == 'linux'",
     "vllm==0.7.3",
     "wandb>=0.19.8",
     "peft>=0.14.0",
