Document HF tokens

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ GIT_USER_EMAIL=your.email@example.com
 # A GitHub token might be required for commiting to the private `agent-reinforcement-training` repository
 GITHUB_TOKEN=YOUR_GITHUB_TOKEN
 
+# HuggingFace Tokens (optional for most models, necessary for training gated models like Llama 3.1)
+HUGGINGFACE_TOKEN=YOUR_HUGGINGFACE_TOKEN
+HUGGING_FACE_HUB_TOKEN=YOUR_HUGGINGFACE_TOKEN
+
 # Optional, OpenPipe API key
 OPENPIPE_API_KEY=YOUR_OPENPIPE_API_KEY
 
