Document TOGETHER_API_KEY

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ HUGGING_FACE_HUB_TOKEN=YOUR_HUGGINGFACE_TOKEN
 
 # Optional, OpenPipe API key
 OPENPIPE_API_KEY=YOUR_OPENPIPE_API_KEY
+# Optional, Together API key (used for deploying models to Together)
+TOGETHER_API_KEY=YOUR_TOGETHER_API_KEY
 
 # Optional, S3 configuration for log and model backups
 AWS_ACCESS_KEY_ID=YOUR_AWS_ACCESS_KEY_ID
