--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ dev-dependencies = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
     "openpipe>=4.49.0",
-    "skypilot[aws,cudo,do,fluidstack,gcp,lambda,paperspace,runpod]>=0.8.0",
+    "skypilot[aws,cudo,do,fluidstack,gcp,kubernetes,lambda,paperspace,runpod]",
     "hatch>=1.14.1",
 ]
 override-dependencies = [
@@ -67,4 +67,5 @@ override-dependencies = [
 
 [tool.uv.sources]
 panza = { git = "https://github.com/corbt/panza.git" }
+skypilot = { git = "https://github.com/bradhilton/skypilot.git", rev = "c0a40e6c" }
 sweagent = { git = "https://github.com/bradhilton/SWE-agent.git" }
