chore: Add langfuse support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
 
 [project.optional-dependencies]
 swebench = [
+    "langfuse>=2.60.7",
     "modal>=1.0.1",
     "sweagent",
     "swebench[modal]>=4.0.3",
