--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ swebench = [
     "langfuse>=2.60.7",
     "modal>=1.0.1",
     "sweagent",
-    "swebench[modal]>=4.0.3",
+    "swebench[modal]>=4.0.3"
 ]
 
 [project.scripts]
@@ -58,10 +58,8 @@ dev-dependencies = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
     "openpipe>=4.49.0",
-    "skypilot[aws,cudo,do,fluidstack,gcp,kubernetes,lambda,paperspace,runpod]",
     "hatch>=1.14.1",
-    "rich>=14.0.0",
-    "requests>=2.32.3",
+    "skypilot[aws,cudo,do,fluidstack,gcp,lambda,paperspace,runpod]==0.8.0",
 ]
 override-dependencies = [
     "bitsandbytes; sys_platform == 'linux'",
@@ -70,5 +68,4 @@ override-dependencies = [
 
 [tool.uv.sources]
 panza = { git = "https://github.com/corbt/panza.git" }
-skypilot = { git = "https://github.com/bradhilton/skypilot.git", rev = "c0a40e6c" }
 sweagent = { git = "https://github.com/bradhilton/SWE-agent.git" }
