--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "openai>=1.65.5",
     "seaborn>=0.13.2",
+    "setuptools>=78.1.0",
     "torch>=2.5.1",
     "torchao>=0.9.0",
     "unsloth==2025.5.1 ; sys_platform == 'linux'",
