feat: Integrate torchtune for distributed training and add configuration files
- Added torchtune as a dependency in pyproject.toml for enhanced model tuning capabilities.
- Introduced new configuration files for torchtune, including a YAML config for multi-device fine-tuning and a training script.
- Created initial structure for torchtune with an __init__.py file and a recipe.py for training logic.
- Implemented a shell script to facilitate the training process with specified configurations.
- Enhanced the uv.lock file to include new package dependencies and versions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "hf-xet>=1.1.0",
     "panza",
     "semver>=3.0.4",
+    "torchtune",
 ]
 
 [project.optional-dependencies]
@@ -71,3 +72,4 @@ override-dependencies = [
 [tool.uv.sources]
 panza = { git = "https://github.com/corbt/panza.git" }
 sweagent = { git = "https://github.com/bradhilton/SWE-agent.git" }
+torchtune = { git = "https://github.com/pytorch/torchtune.git", rev = "2344509cf83bd886538fe3e8263e5145d1afb5c2" }
